--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -1,12 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Inter';
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 #root {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -46,15 +51,35 @@ header {
 
 main {
     display: flex;
+    height: 100%;
 }
 
-sidebar {
+aside {
+    flex: 0.2;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+    height: 100%;
+}
 
-    flex: 0.3;
+.side-bar-buttons-top>button>svg {
+    color: #66A7C1;
+}
+
+.side-bar-side-top {
+    padding: 1rem;
+    display: flex;
+    gap: 1rem;
+    /* width: 100%;
+    padding-bottom: 5rem; */
+
+}
+
+.side-bar-top.active,
+.side-bar-bottom.active {
+    background-color: rgba(102, 167, 193, 0.2);
 }
 
 
-.side-bar-buttons-top {
+.side-bar-buttons {
     padding: 1rem;
     display: flex;
     gap: 1rem;
@@ -62,25 +87,29 @@ sidebar {
     padding-bottom: 5rem;
 }
 
-.side-bar-top{
-    background-color: rgb(102, 167, 193, 0.2);
-
-}
-
-.side-bar-buttons{
-    padding: 1rem;
-    display: flex;
-    gap: 1rem;
-    width: 100%;
-    padding-bottom: 5rem;
-}
-
-.side-bar-buttons > button , .side-bar-buttons-top > button {
+.side-bar-buttons>button,
+.side-bar-buttons-top>button {
     padding: 0;
     border: none;
     background: none;
 }
 
-p{
+
+.inner-data > p {
+    color: #1A6280;
+    display: flex;
+    align-items: center; 
+    gap: 0.5rem;
+}
+
+
+.planning-section >p  {
     color: #66A7C1;
+}
+
+.planning-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
 }
