--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -95,19 +95,19 @@ aside {
 }
 
 
-.inner-data > p {
+.inner-data>p {
     color: #1A6280;
     display: flex;
-    align-items: center; 
+    align-items: center;
     gap: 0.5rem;
 }
 
 
-.planning-section >p  {
+.planning-section>p {
     color: #66A7C1;
 }
 
-.planning-section{
+.planning-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -116,32 +116,75 @@ aside {
 
 
 
-.backlog{
+.backlog {
     width: -webkit-fill-available;
     flex: 1;
 }
 
-.sprints{
+.top-sprint {
     display: flex;
     align-items: center;
-    background-color: rgb(102, 167 , 193 , 0.2);
-    border-radius: 10px;
-    margin: 2em;
-    padding: 0.2rem;
     justify-content: space-between;
+    padding: 0.5rem;
 }
 
-.right-side-sprint{
+.sprints {
+    background-color: rgb(102, 167, 193, 0.2);
+    border-radius: 10px;
+    margin: 1rem;
+}
+
+.sprint-task{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem;
+    background-color: whitesmoke;
+}
+
+.sprint-task-right{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+.sprint-task-left{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.sprint-task-left > svg{
+    height: 20px;
+    width: 20px;
+}
+
+.sprint-task-right > svg,
+.sprint-task-left > svg {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.sprint-task:hover .sprint-task-right > svg,
+.sprint-task:hover .sprint-task-left > svg {
+    opacity: 1;
+}
+
+
+
+
+.right-side-sprint {
     display: flex;
     gap: 1rem;
 }
 
-.left-side-sprint{
+.left-side-sprint {
     display: flex;
     align-items: center;
 }
 
-.right-side-sprint > button{
+.right-side-sprint>button {
     /* text-decoration: none; */
     border-style: none;
     background-color: #1A6280;
@@ -152,4 +195,3 @@ aside {
     align-items: center;
     gap: 1rem;
 }
-
