--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -156,7 +156,6 @@ aside {
 
 .backlog {
     width: -webkit-fill-available;
-    flex: 1;
 }
 
 .top-sprint {
@@ -209,8 +208,34 @@ aside {
     opacity: 1;
 }
 
+.issue-div{
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+}
 
+.backlog-card{
+    border-radius: 10px;
+    margin: 1rem;
+}
 
+.issue-div:hover{
+    background-color: lightgray;
+    border-radius: 10px;
+}
+
+.backlog-cards{
+    border-style: dotted;
+    border-color: lightgray;
+    border-width: 2px;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color: gray;
+    font-size: x-small;
+}
 
 .right-side-sprint {
     display: flex;
