--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -62,6 +62,10 @@ main {
     height: 100%;
 }
 
+.Flex-center{
+    justify-content: center;
+}
+
 aside {
     width: 400px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
