--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -22,6 +22,8 @@
     flex-direction: column;
 }
 
+
+
 header {
     padding: 1rem;
     background-color: #EDF2F4;
@@ -134,7 +136,6 @@ aside {
     
 }
 
-
 .inner-data > p {
     &:hover{
         color: #62a9c7;
@@ -166,6 +167,7 @@ aside {
 
 .backlog {
     width: -webkit-fill-available;
+    flex: 1;
 }
 
 .top-sprint {
@@ -268,3 +270,4 @@ aside {
     align-items: center;
     gap: 1rem;
 }
+
