--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -22,7 +22,12 @@
     flex-direction: column;
 }
 
-
+section{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
 
 header {
     padding: 1rem;
